styles.css
/* ... */
.row1-section-3 {
  grid-row: 3/4;
  padding: 15px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background:
  linear-gradient(
    rgba(206, 205, 205, 0.45),
    rgba(10, 8, 8, 0.45)
  ),
  url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/image-796x417.png);
  grid-area: row1-section-3;
}

.row-2 {
  display: grid;
  grid-row: 2/3;
  grid-template-rows: 30px  repeat(8, 100px);
  font-size: 1.2rem;
  grid-gap: 15px;
  grid-area: row-2;
  padding: 5px;
  grid-template-areas:
    "row2-section-1"
    "row2-section-2"
    "row2-section-3"
    "row2-section-4"
    "row2-section-5"
    "row2-section-6"
    "row2-section-7"
    "row2-section-8"
    "row2-section-9";
}

.row2-section-1 {
  display: grid;
  grid-row: 1/2;
  color: var(--orange);
  font-size: 1.3rem;
  font-weight: 700;
  align-items: center;
  grid-area: row2-section-1;
}

.row2-section-1 a {
  color: var(--orange);
}

.row2-section-2,
.row2-section-3,
.row2-section-4,
.row2-section-5,
.row2-section-6,
.row2-section-7,
.row2-section-8,
.row2-section-9 {
  display: grid;
  justify-items: start;
  grid-template-columns: 7em 13em;
  grid-template-rows: 1fr;
  grid-template-areas: "row-image row-text";
}

.row-image {
  grid-column: 1/2;
  width: 7em;
  height: 5em;
  grid-area: row-image;
}

.row-text {
  color: black;
  grid-column: 2/4;
  grid-area: row-text;
}

.row-text :nth-child(1) {
  font-weight: bold;
  font-size: 0.8em;
}

.row-text :nth-child(2) {
  color: gray;
  font-size: 0.8em;
}

.footer-icons > a {
  color: white;
  border: 1px solid var(--black);
  border-radius: 50%;
  padding: 0.6em;
  background-color: var(--grey);
}

.footer-section2 > a {
  color: white;
  padding: 2px;
  width: 75%;
}

.row3-section-2 > a {
  font-weight: 700;
}

.row2-section-2 {
  display: grid;
  grid-row: 2/3;
  grid-area: row2-section-2;
}

.row2-section-3 {
  display: grid;
  grid-row: 3/4;
  grid-area: row2-section-3;
}

.row2-section-4 {
  display: grid;
  grid-row: 4/5;
  grid-area: row2-section-4;
}

.row2-section-5 {
  display: grid;
  grid-row: 5/6;
  grid-area: row2-section-5;
}

.row2-section-6 {
  display: grid;
  grid-row: 6/7;
  grid-area: row2-section-6;
}

.row2-section-7 {
  display: grid;
  grid-row: 7/8;
  grid-area: row2-section-7;
}

.row2-section-8 {
  display: grid;
  grid-row: 8/9;
  grid-area: row2-section-8;
}

.row2-section-9 {
  display: grid;
  grid-row: 9/10;
  grid-area: row2-section-9;
}

.row-3 {
  display: grid;
  grid-row: 3/4;
  grid-template-rows: 120px 280px 280px 280px;
  grid-gap: 15px;
  padding: 2em 0;
  background-color: white;
  grid-area: row-3;
  grid-template-areas:
    "row3-section-1"
    "row3-section-2"
    "row3-section-3"
    "row3-section-4";
}

.row3-section-1 {
  display: flex;
  flex-direction: column;
  grid-row: 1/2;
  color: var(--orange);
  background-color: var(--white);
  grid-area: row3-section-1;
  justify-content: space-between;
}

.row3-section-1-a {
  font-size: 1.4rem;
  font-weight: 700;
  margin-bottom: 1em;
}

.row3-section-1 a {
  color: var(--orange);
}

.row3-section-1-b a {
  display: block;
  margin-bottom: 1em;
}

.row5-section-1-a > a {
  background-color: var(--white);
  font-size: 1.5rem;
  font-weight: 700;
  color: var(--orange);
}

.row3-section-1 a:hover {
  color: var(--black);
}

.row3-section-2 {
  display: flex;
  flex-direction: column;
  background-color: var(--white);
  grid-row: 2/3;
  grid-area: row3-section-2;
}

.row3-section-3 {
  display: flex;
  flex-direction: column;
  background-color: var(--white);
  grid-row: 3/4;
  grid-area: row3-section-3;
}

.row3-section-4 {
  display: flex;
  flex-direction: column;
  background-color: var(--white);
  grid-row: 5/6;
  grid-area: row3-section-4;
}

.row3-title {
  background-color: var(--orange);
  color: white;
  font-weight: 500;
  padding: 1em 0 1em 0;
}

.row3-funding {
  background-color: var(--light-orange);
  padding: 1em 0 1em 0;
}

.row3-image {
  width: 56px;
  height: auto;
  position: absolute;
  margin: 0.5em;
}

.row3-funding :nth-child(2) {
  font-weight: 500;
}

.row3-funding p {
  font-weight: normal;
  color: grey;
  font-size: 0.8em;
  letter-spacing: 0.03em;
}

.social-funding {
  background-color: var(--lighter-orange);
}

.row3-title,
.row3-funding {
  padding-left: 6em;
}

.social-funding p {
  padding: 1.5em 0 0 0.5em;
  color: #555;
  font-size: 0.8rem;
  letter-spacing: 0.03em;
  line-height: 1.2;
}

.social-funding :nth-child(2) {
  border-bottom: 1px solid var(--orange);
  padding-bottom: 1.5em;
}

.social-funding :nth-child(3) {
  padding: 2em 0 2em 0.5em;
}

.button {
  color: var(--orange);
  padding: 0.25em;
  font-size: 0.75em;
}

.row-4 {
  display: grid;
  grid-row: 4/5;
  grid-template-rows: repeat(9, 800px);
  gap: 15px;
  background-color: white;
  grid-area: row-4;
  grid-template-areas:
    "row4-section-1"
    "row4-section-2"
    "row4-section-3"
    "row4-section-4"
    "row4-section-5"
    "row4-section-6"
    "row4-section-7"
    "row4-section-8";
}

.hardfork-card {
  background-image: url(./asset/hardfork-img.jpeg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 300px;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.row-4 h1 {
  color: #f42;
  font-size: 1.3rem;
  font-weight: 700;
  margin-bottom: 0.5em;
}

.hardfork-card * {
  font-family: 'Noto Sans JP', sans-serif;
  color: white;
  padding-left: 0.4em;
  margin-bottom: 0.5em;
}

.hardfork-card p {
  font-size: 1.2rem;
  font-weight: bolder;
}

.hardfork-card a:hover {
  text-decoration: none;
}

.author {
  font-size: 0.7rem;
  color: gray;
}

.hardfork-desc {
  display: flex;
  flex-direction: column;
}

.hardfork-sub {
  display: flex;
  height: 96px;
  justify-content: space-between;
  margin-bottom: 2em;
}
/* ... */

